objects/Application_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>Name of the external application/ resource</description>
        <label>Application Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Description__c</fullName>
        <description>Description/ summary of how the configuration record is used/ applied</description>
        <label>Configuration Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_Key__c</fullName>
        <description>Configuration key related to the value (of the key-value pair)</description>
        <label>Configuration Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <description>Name of the configuration/ setting for the external application/ resource</description>
        <label>Configuration Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Value__c</fullName>
        <description>Configuration value related to the key (of the key-value pair)</description>
        <label>Configuration Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying of the configuration record is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <description>Configuration data used for applications that consume external endpoints and resources</description>
    <label>Application Configuration</label>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Application Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Salesforce_NET_Services</fullName>
        <active>true</active>
        <description>Record Type used for Salesforce .NET Service Configurations</description>
        <label>Salesforce .NET Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yodle_Live_Services</fullName>
        <active>true</active>
        <description>Record Type used for Yodle Live Service Configurations</description>
        <label>Yodle Live Services</label>
    </recordTypes>
</CustomObject>